--- a/WebContent/StyleCSS/Base.css
+++ b/WebContent/StyleCSS/Base.css
@@ -29,11 +29,11 @@ li > a {
 	color: black;
 	text-decoration: none;
 }
-.submenu {
+.submenu-box {
 	width: 120px;
 	float: left;
 }
- .submenu > li {
+ .submenu-box > ul > li {
  	width: 80px;
  	height: 50px;
  	font-weight: bold;
