--- a/WebContent/StyleCSS/Base.css
+++ b/WebContent/StyleCSS/Base.css
@@ -1,55 +1,48 @@
-.wrapper {
-	width: 1000px;
-	margin: auto;
-	posigion: relative;
+.navbar-brand {
+	display: inline-block;
+	padding-top: .3125rem;
+	padding-bottom: .3125rem;
+	margin-right: 1rem;
+	font-size: 1.25rem;
+	lie-height: inherit;
+	white-space: nowrap;
 }
-
-.menu {
-	display: table;
-	list-style: none;
-	margin-left: auto;
-	margin-right: auto;
-	width: 1000px;
+.navbar-light .navbar-brand {
+	clolr: rgba(0,0,0,.9);
 }
-.menu > li {
-	width: 230px;
-	float: left;
-	position: relative;
-	text-align: center;
+.site-header {
+	backdrop-filter: saturate(180%)
+		blur(20px);
+}
+.site-header a {
+	color: #000;
 	font-weight: bold;
-	border-left: 1px solid #000;
+	width: 150px;
+	text-align: center;
+   	transition: ease-in-out color .15s;
 }
-.menu-box {
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 1px solid #000;
-	border-top: 1px solid #000;
-}
-li > a {
-	color: black;
+.site-header a:hover {
+	color: #fff;
 	text-decoration: none;
 }
-.submenu-box {
-	width: 120px;
-	float: left;
+.container {
+	max-width: 960px;
 }
- .submenu-box > ul > li {
- 	width: 80px;
- 	height: 50px;
- 	font-weight: bold;
- }
-.title {
-	text-align: center;
+.sidebar {
+	top: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 100;
+	padding: 20px 10px 10px;
+	box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
-
-.login {
-	float: right;
-	right: 10px;
-	clear: both;
+.sidebar .nav-link {
+	font-weight: bold;
+	color: #333;
 }
-.contents {
-		border-left: 1px solid #000;
-		float: right;
-		padding-left: 20px;
-		width: 800px;
+.sidebar .nav-link.active {
+	color: #007bff;
+}
+.sidebar-stick a:hover {
+	color: gray;
 }
